--- a/dubbo-admin/src/main/webapp/WEB-INF/dubbo.properties
+++ b/dubbo-admin/src/main/webapp/WEB-INF/dubbo.properties
@@ -1,3 +1,3 @@
-dubbo.registry.address=zookeeper://127.0.0.1:2181
+dubbo.registry.address=zookeeper://10.143.117.17:2181?backup=10.143.117.18:2181,10.143.117.19:2181
 dubbo.admin.root.password=root
 dubbo.admin.guest.password=guest
