--- a/dubbo-tool/dubbo-demo-lite/pom.xml
+++ b/dubbo-tool/dubbo-demo-lite/pom.xml
@@ -18,8 +18,8 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.alibaba</groupId>
-		<artifactId>dubbo-parent</artifactId>
-		<version>2.8.4</version>
+		<artifactId>dubbo-tool</artifactId>
+		<version>2.8.4-SNAPSHOT</version>
 	</parent>
 	<artifactId>dubbo-demo-lite</artifactId>
 	<packaging>pom</packaging>
@@ -39,7 +39,7 @@
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>dubbo</artifactId>
-                <version>2.8.4</version>
+                <version>2.8.4-SNAPSHOT</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
