--- a/dubbo-tool/pom.xml
+++ b/dubbo-tool/pom.xml
@@ -12,7 +12,7 @@
 	<parent>
 		<groupId>com.alibaba</groupId>
 		<artifactId>dubbo-parent</artifactId>
-		<version>2.8.4</version>
+		<version>2.8.4-SNAPSHOT</version>
 	</parent>
 	<artifactId>dubbo-tool</artifactId>
 	<packaging>pom</packaging>
@@ -31,7 +31,7 @@
 			<dependency>
 				<groupId>com.alibaba</groupId>
 				<artifactId>dubbo</artifactId>
-				<version>2.8.4</version>
+				<version>2.8.4-SNAPSHOT</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
